--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -26,12 +26,11 @@
       </div>
     {% endif %}
 
-    <h2 class="archive__item-title" itemprop="headline"> {% if post.collection == 'publications' %} {{ title }} {% elsif post.link %} <a href="{{ post.link }}">{{ title }}</a> 
+    <h2 class="archive__item-title" itemprop="headline"><a href="{{ post.link }}">{{ title }}</a> 
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
-      {% endif %}
       {% endif %}
     </h2>
     
@@ -59,7 +58,7 @@
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }} </p>
     {% elsif post.paperurl %}
-      <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
+      <p><a href=" {{ post.paperurl }} "><u>PDF</u></a></p>
     {% endif %}
 
   </article>
